--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
         <div id="header">
             <img src="erik-lucatero-310633-unsplash.jpg" />
-            <div id="name">John Smith</div>
+            <div id="name">Cheng Thao</div>
             <div id="contact">
                 800 S Main Street, St. Paul, MN, 55109 <br/> phone: (651) 243-4534 <br/>Email: jsmith@johnsmith.com, WWW: http://www.johnsmith.com
             </div>
